_sass/_main.scss
/* ... */
html[data-theme="dark"] {
	--text-font: Play;
	--source-code-font: Source Code Pro;
	--very-light-text-color: #EEE;
	--light-text-color: #c4bbf0;
	--medium-text-color: #52057b;
	--main-text-color: #EAEAEA;
	--highlight-text-color: #6cb4a0;
	--dark-text-color: rgb(36, 38, 42);
	--link-color: rgb(255, 89, 125);
	--code-bg-color: rgb(36, 38, 42);
	background-color: rgb(19, 20, 24);

	#theme-toggle div {
		position: relative;
		width: 24px;
		height: 24px;
		border-radius: 50%;
		border: 4px solid var(--theme-ui-colors-toggleIcon, #cbd5e0);
		background-color: var(--theme-ui-colors-toggleIcon, #cbd5e0);
		transform: scale(0.55);
		transition: all 0.45s ease 0s;
		overflow: visible;
		box-shadow: none;

		&::before {
			content: "";
			position: absolute;
			right: -9px;
			top: -9px;
			height: 24px;
			width: 24px;
			border: 2px solid var(--theme-ui-colors-toggleIcon, #cbd5e0);
			border-radius: 50%;
			transform: translate(14px, -14px);
			opacity: 0;
			transition: transform 0.45s ease 0s;
		}

		&::after {
			content: "";
			width: 8px;
			height: 8px;
			border-radius: 50%;
			margin: -4px 0px 0px -4px;
			position: absolute;
			top: 50%;
			left: 50%;
			box-shadow: 0 -23px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				0 23px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0), 23px 0 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				-23px 0 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				15px 15px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				-15px 15px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				15px -15px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0),
				-15px -15px 0 var(--theme-ui-colors-toggleIcon, #cbd5e0);
			transform: scale(1);
			transition: all 0.35s ease 0s;
		}
	}
}

body {
	font-family: var(--text-font), monospace;
	text-rendering: optimizeLegibility;
	line-height: 1.75;
	color: var(--main-text-color);
}

a {
	color: var(--link-color);
	text-decoration: none;
}

.post p {
	margin: 1rem 0;
}

.meta {
	margin: 1.4rem 0;

}

code,
pre {
	background: var(--code-bg-color);
	margin: 0 -27px;
	border-width: 1px;
}

code {
	font-family: var(--source-code-font), monospace;
	margin: unset;
	padding: 0.1rem;
	color: var(--highlight-text-color);
}

pre code {
	background-color: unset;
	color: unset;
}

pre {
	border-width: 3px;
	padding: 0.8rem;
	white-space: pre-wrap;
	border-style: none none none solid;
	border-color: var(--light-text-color);
}

img {
	max-width: 100%;
}

hr {
	background: var(--light-text-color);
	height: 1px;
	border: 0;
}

header {
	flex-basis: 10rem;
	flex-grow: 1;
	position: relative;
}

header a {
	text-decoration: none;
}

header li {
	margin-bottom: 0.2rem;
	text-align: right;
	margin-right: 2rem;
}

header a.active {
	font-weight: bold;
}

header,
section {
	padding: 1rem 0;
}

section {
	margin-top: 5.5rem;
}

blockquote {
	font-style: italic;
	border-left: 5px solid var(--dark-text-color);
	padding-left: 1rem;
}

h1 {
	color: var(--main-text-color);
	text-transform: uppercase;
	font-size: 2rem;
	font-weight: bold;
	margin-bottom: 1.5rem;
}

h2,
h3,
h4,
h5 {
	font-weight: bold;
	margin-bottom: 1.5rem;
	font-size: 2rem;
}

h2 {
	font-size: 1.8rem;
}

h3 {
	font-size: 1.6rem;
}

h4 {
	font-size: 1.4rem;
}

h5 {
	font-size: 1.2rem;
}

h6 {
	font-size: 1rem;
}

section h1:first-child {
	margin-top: 0;
}

strong,
b {
	font-weight: bold;
}

.photos ul {
	list-style: none;
}

.photos li {
	margin-bottom: 1.5rem;
}

.photo picture,
.project picture {
	margin-bottom: 0.5rem;
}

.posts > h3 {
	font-weight: 500;
}

.post ul {
	margin: 0px;
	margin: 0px 0px 10px 10px;
}

.post ol {
	margin: 0px;
	margin: 0px 0px 10px 15px;
}

.posts li {
	align-items: center;
	display: flex;
	justify-content: space-between;
	margin-bottom: 0.5rem;
}

.posts li a,
.posts li div,
.projects li a {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	font-weight: bold;
}

.posts li time,
.projects li time {
	padding-left: 1rem;
	white-space: nowrap;
	font-variant-numeric: tabular-nums;
}

time {
	color: var(--main-text-color);
}

.post > h1.title {
	font-size: x-large;
	margin-top: 0;
	margin-bottom: 0;
}

.post > time {
	margin-bottom: 0;
	margin-top: 3rem;
}

.highlight {
	margin: 0px;
}

main {
	display: flex;
	max-width: 47rem;
	margin: -5rem auto 0;
	padding: 2.4rem 2rem;
	flex-direction: column;
}


.flex-row-between {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

.social-footer {
  padding: 1rem;
  display: flex;
  justify-content: center;
  position: initial;

  .social-footer-icons {
     
    .fa {
      font-size: 1.9rem;
      color: #a9a9a9;
      padding: 20px;
      
      &:hover {
        color: darken(#a9a9a9, 25%);
        transition: color 0.3s ease-in;
      }
    }
  }
}

@media screen and (max-width: 45rem) {
	header li {
		display: inline;
		margin-right: 1rem;
	}
	.logo {
		padding-bottom: 1rem;
	}
	header ul {
		border-bottom: 1px solid #edf2f7;
		padding-bottom: 2rem;
	}
	nav ul {
		border-right: 0px;
	}

	.photos ul {
		margin-top: 0.5rem;
	}

	main {
		padding: 0 2rem;
	}

}

section {
	flex-grow: 999;
	display: flex;
	flex-direction: column;
}

figcaption {
	font-size: smaller;
}

.bio {
	margin-bottom: 5rem;
}

::selection {
background-color: #fffba0;
color: #333;
}


.search-article {
  position: relative;
 

  label[for="search-input"] {
    position: relative;
    top: -10px;
    left: 11px;
  }

  input[type="search"] {
    top: -1rem;
    left: 0;
    border: 0;
    width: 100%;
    height: 30px;
    outline: none;
    position: absolute;
    border-radius: 5px;
    padding: 10px 10px 10px 35px;
    color: var(--main-text-color);
    -webkit-appearance: none;
    background-color: rgba(128, 128, 128, 0.1);
    border: 1px solid rgba(128, 128, 128, 0.1);
    &::-webkit-input-placeholder {
      color: #808080;
    }
    &::-webkit-search-decoration,
    &::-webkit-search-results-decoration {
      display: none;
    }
  }
}
/* ... */

